Update AboutPage.html to latest version

--- a/pages/AboutPage.html
+++ b/pages/AboutPage.html
@@ -1,116 +1,115 @@
 <html lang="en">
- <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>
-   About Us - AutoHub
-  </title>
-  <script src="https://cdn.tailwindcss.com">
-  </script>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet"/>
-  <style>
-   body {
+<head>
+    <meta charset="utf-8"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <title>About Us - AutoHub</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"/>
+    <style>
+        body {
             font-family: 'Roboto', sans-serif;
         }
-  </style>
- </head>
- <body class="bg-gray-200">
-  <header class="bg-gray-900 text-white flex justify-between items-center p-4">
-   <div class="flex items-center">
-    <div class="bg-yellow-500 w-4 h-4 mr-2">
-    </div>
-    <span>
-     BND
-    </span>
-   </div>
-   <div>
-    AutoHub
-   </div>
-  </header>
-  <section class="relative">
-   <img alt="A car in a showroom" class="w-full h-64 object-cover" height="400" src="https://storage.googleapis.com/a1aa/image/5LkTnDRcWQf77L-VifDO0EPRqQUsPCac2tI2Uk90ToU.jpg" width="800"/>
-   <div class="absolute inset-0 flex flex-col justify-center items-center text-white">
-    <h1 class="text-4xl font-bold">
-     About Us
-    </h1>
-    <p class="text-lg">
-     Find your next car
-    </p>
-   </div>
-  </section>
-  <section class="bg-gray-300 text-center py-2">
-   <p>
-    We are your connection to cars near you.
-   </p>
-  </section>
-  <section class="bg-[#4F4E4E] text-white py-8 px-4">
-   <div class="max-w-4xl mx-auto">
-    <h2 class="text-2xl font-bold text-center mb-4">
-     Who we are
-    </h2>
-    <p class="text-center mb-8">
-     We are a team of 6 individuals tasked in creating an automotive marketplace. AutoHub provides shoppers with the the data, resources and digital tools needed to make informed buying decisions and seamlessly connect with automotive retailers
-    </p>
-   </div>
-  </section>
-  <section class="bg-[#b8b8b8] py-8 px-4">
-   <div class="max-w-4xl mx-auto">
-    <h2 class="text-2xl font-bold text-center mb-4">
-     Our Goal
-    </h2>
-    <p class="text-center mb-8">
-     At AutoHub, our goal is to provide a seamless and efficient car distribution experience. Connecting buyers with high-quality vehicles from trusted manufacturers. We strive to offer a wide selection of cars that meet the diverse needs of our customers, ensuring both convenience and satisfaction.
-    </p>
-   </div>
-  </section>
-  <section class="bg-gray-100 py-8 px-4">
-   <div class="max-w-4xl mx-auto">
-    <h2 class="text-2xl font-bold text-center mb-4">
-     Team Members
-    </h2>
-    <p class="text-center mb-8">
-     Below are the individuals that are responsible in designing and developing this website through sheer determination and absolute ambition
-    </p>
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
-     <div class="bg-white p-4 rounded shadow">
-      <img alt="Profile picture of Qashrinasyasya, a female Muslim" class="w-24 h-24 mx-auto rounded-full mb-4" height="100" src="https://storage.googleapis.com/a1aa/image/StLBnV3ub0XEL5JcoZbdA7BfILMClsLHPq870OZbnww.jpg" width="100"/>
-      <p class="text-center font-bold">
-       Qashrinasyasya
-      </p>
-     </div>
-     <div class="bg-white p-4 rounded shadow">
-      <img alt="Profile picture of Nurromaizie" class="w-24 h-24 mx-auto rounded-full mb-4" height="100" src="https://storage.googleapis.com/a1aa/image/Y9p__G-z9jddiJ8jggXHQ9egNVxh3oFzCsa2jidmx7c.jpg" width="100"/>
-      <p class="text-center font-bold">
-       Nurromaizie
-      </p>
-     </div>
-     <div class="bg-white p-4 rounded shadow">
-      <img alt="Profile picture of Amerro Elmyeano" class="w-24 h-24 mx-auto rounded-full mb-4" height="100" src="https://storage.googleapis.com/a1aa/image/mDg0Eryx1oNCLkzXuEQvg-stnfEt2JL24DlUcuDsJvU.jpg" width="100"/>
-      <p class="text-center font-bold">
-       Amerro Elmyeano
-      </p>
-     </div>
-     <div class="bg-white p-4 rounded shadow">
-      <img alt="Profile picture of Haziq Fared" class="w-24 h-24 mx-auto rounded-full mb-4" height="100" src="https://storage.googleapis.com/a1aa/image/wRjNF0sEpvnb92XXrii-pti-LqcTWJAAt5BHpngAtAo.jpg" width="100"/>
-      <p class="text-center font-bold">
-       Haziq Fared
-      </p>
-     </div>
-     <div class="bg-white p-4 rounded shadow">
-      <img alt="Profile picture of Khairul Haziq" class="w-24 h-24 mx-auto rounded-full mb-4" height="100" src="https://storage.googleapis.com/a1aa/image/GnFWsORBX_oK1Sc_iL6suRS3deMJW3BgefGLFoNlM8Y.jpg" width="100"/>
-      <p class="text-center font-bold">
-       Khairul Haziq
-      </p>
-     </div>
-     <div class="bg-white p-4 rounded shadow">
-      <img alt="Profile picture of Hussainur-Rahim" class="w-24 h-24 mx-auto rounded-full mb-4" height="100" src="https://storage.googleapis.com/a1aa/image/4G6i7fGuYrJ9OhfVpMokmTCGG5bwNlIX7EW2Urucfsw.jpg" width="100"/>
-      <p class="text-center font-bold">
-       Hussainur-Rahim
-      </p>
-     </div>
-    </div>
-   </div>
-  </section>
- </body>
+        .fade-in {
+            animation: fadeIn 0.5s ease-in-out;
+        }
+        .fade-out {
+            animation: fadeOut 0.5s ease-in-out;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        @keyframes fadeOut {
+            from { opacity: 1; }
+            to { opacity: 0; }
+        }
+    </style>
+</head>
+<body class="bg-gray-200 fade-in">
+    <header class="bg-transparent text-white flex justify-between items-center p-4 absolute top-0 left-0 w-full z-10">
+        <div class="flex items-center space-x-2">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/9/9c/Flag_of_Brunei.svg" alt="Brunei Flag" class="w-4 h-3">
+            <span class="text-white text-sm">BND</span>
+        </div>
+        <div class="flex items-center space-x-4">
+            <div class="text-lg font-bold" style="color: #FFF0F0;">AutoHub</div>
+            <a href="#"><img src="https://i.ibb.co/zW9YN2Wq/Home.png" alt="Home" width="25" height="25" class="cursor-pointer"></a>
+        </div>
+    </header>
+
+    <section class="relative w-full h-[250px] overflow-hidden">
+        <img alt="Car in a showroom" class="absolute inset-0 w-full h-full object-cover" src="https://i.ibb.co/zHxhVTzJ/TOP.png"/>
+        <div class="absolute inset-0 bg-black bg-opacity-30 flex flex-col justify-center items-center text-white">
+            <h1 class="text-3xl md:text-4xl font-bold" style="color: #FFF0F0;">About Us</h1>
+            <p class="text-md md:text-lg" style="color: #FFF0F0;">Find your next car</p>
+        </div>
+    </section>
+
+    <section class="text-center py-2">
+        <p>We are your connection to cars near you.</p>
+    </section>
+    <section class="bg-[#A0A0A0] py-8 px-4">
+        <div class="max-w-4xl mx-auto">
+            <h2 class="text-2xl font-bold text-center mb-4">Who <span style="color: #5D0505;">we are</span></h2>
+            <p class="text-center mb-8">
+                We are a team of 6 individuals tasked in creating an automotive marketplace. AutoHub provides shoppers with the data, resources, and digital tools needed to make informed buying decisions and seamlessly connect with automotive retailers.
+            </p>
+        </div>
+    </section>
+    <section class="bg-[#b8b8b8] py-8 px-4">
+        <div class="max-w-4xl mx-auto">
+            <h2 class="text-2xl font-bold text-center mb-4">Our <span style="color: #5D0505;">Goal</span></h2>
+            <p class="text-center mb-8">
+                At AutoHub, our goal is to provide a seamless and efficient car distribution experience. Connecting buyers with high-quality vehicles from trusted manufacturers. We strive to offer a wide selection of cars that meet the diverse needs of our customers, ensuring both convenience and satisfaction.
+            </p>
+        </div>
+    </section>
+    <section class="bg-[#d9d9d9] py-8 px-4">
+        <div class="max-w-4xl mx-auto">
+            <h2 class="text-2xl font-bold text-center mb-4"><span style="color: #5D0505;">Team</span> Members</h2>
+            <p class="text-center mb-8">
+                Below are the individuals that are responsible in designing and developing this website through sheer determination and absolute ambition.
+            </p>
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
+                <div class="bg-white p-4 rounded shadow">
+                    <img alt="Profile picture of Qashrinasyasya" class="w-24 h-24 mx-auto rounded-full mb-4" src="https://storage.googleapis.com/a1aa/image/StLBnV3ub0XEL5JcoZbdA7BfILMClsLHPq870OZbnww.jpg"/>
+                    <p class="text-center font-bold">Qashrinasyasya</p>
+                </div>
+                <div class="bg-white p-4 rounded shadow">
+                    <img alt="Profile picture of Nurromaizie" class="w-24 h-24 mx-auto rounded-full mb-4" src="https://static.vecteezy.com/system/resources/thumbnails/007/109/455/small/elegant-young-caucasian-handsome-man-on-white-background-studio-fashion-portrait-photo.jpg"/>
+                    <p class="text-center font-bold">Nurromaizie</p>
+                </div>
+                <div class="bg-white p-4 rounded shadow">
+                    <img alt="Profile picture of Amerro Elmyeano" class="w-24 h-24 mx-auto rounded-full mb-4" src="https://images.squarespace-cdn.com/content/5e335c197ce81d501c607a07/1725213598840-UJWHT4IIHICL3TEJ9QH4/male-corporate-headshot-tips-mens-guide-professional-headshots.jpg?format=1500w&content-type=image%2Fjpeg"/>
+                    <p class="text-center font-bold">Amerro Elmyeano</p>
+                </div>
+                <div class="bg-white p-4 rounded shadow">
+                    <img alt="Profile picture of Haziq Fared" class="w-24 h-24 mx-auto rounded-full mb-4" src="https://storage.googleapis.com/a1aa/image/wRjNF0sEpvnb92XXrii-pti-LqcTWJAAt5BHpngAtAo.jpg"/>
+                    <p class="text-center font-bold">Haziq Fared</p>
+                </div>
+                <div class="bg-white p-4 rounded shadow">
+                    <img alt="Profile picture of Khairul Haziq" class="w-24 h-24 mx-auto rounded-full mb-4" src="https://storage.googleapis.com/a1aa/image/GnFWsORBX_oK1Sc_iL6suRS3deMJW3BgefGLFoNlM8Y.jpg"/>
+                    <p class="text-center font-bold">Khairul Haziq</p>
+                </div>
+                <div class="bg-white p-4 rounded shadow">
+                    <img alt="Profile picture of Hussainur-Rahim" class="w-24 h-24 mx-auto rounded-full mb-4" src="https://storage.googleapis.com/a1aa/image/4G6i7fGuYrJ9OhfVpMokmTCGG5bwNlIX7EW2Urucfsw.jpg"/>
+                    <p class="text-center font-bold">Hussainur-Rahim</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <script>
+        const links = document.querySelectorAll('a');
+        links.forEach(link => {
+            link.addEventListener('click', (e) => {
+                e.preventDefault();
+                document.body.classList.add('fade-out');
+                setTimeout(() => {
+                    window.location.href = link.href;
+                }, 500);
+            });
+        });
+    </script>
+</body>
 </html>
