--- a/pages/SearchPage.html
+++ b/pages/SearchPage.html
@@ -127,7 +127,7 @@
         <a href="#" class="block text-white">SPORT</a>
       </nav>
       <div class="space-y-4 mt-10">
-        <a href="#" class="flex items-center space-x-2">
+        <a href="{% url 'about' %}" class="flex items-center space-x-2">
           <i class="fas fa-info-circle"></i><span>About</span>
         </a>
         <a href="#" class="flex items-center space-x-2">
