Modify the sort section under SEAT (changing options font size) and replace "PERFORMANCE" to "TRANSMISSION"

--- a/pages/SearchResult.html
+++ b/pages/SearchResult.html
@@ -280,22 +280,23 @@
     <span id="arrowSeat">▼</span>
   </h2>
   <ul id="seatOptions" class="ml-6 mt-2 space-y-1 overflow-hidden max-h-0 transition-all duration-300 ease-in-out">
-    <li class="cursor-pointer hover:text-blue-600 list-disc">2 Seater</li>
-    <li class="cursor-pointer hover:text-blue-600 list-disc">3 Seater</li>
-    <li class="cursor-pointer hover:text-blue-600 list-disc">5 Seater</li>
-    <li class="cursor-pointer hover:text-blue-600 list-disc">7 Seater</li>
-    <li class="cursor-pointer hover:text-blue-600 list-disc">9 Seater</li>
+    <li class="cursor-pointer hover:text-blue-600 list-disc">2 SEATER</li>
+    <li class="cursor-pointer hover:text-blue-600 list-disc">3 SEATER</li>
+    <li class="cursor-pointer hover:text-blue-600 list-disc">5 SEATER</li>
+    <li class="cursor-pointer hover:text-blue-600 list-disc">7 SEATER</li>
+    <li class="cursor-pointer hover:text-blue-600 list-disc">9 SEATER</li>
   </ul>
 </div>
 
-<!-- PERFORMANCE Section -->
+<!-- TRANSMISSION Section -->
 <div>
   <h2 id="togglePerformance" class="text-black font-semibold cursor-pointer flex justify-between items-center">
-    PERFORMANCE
+    TRANSMISSION
     <span id="arrowPerformance">▼</span>
   </h2>
   <ul id="performanceOptions" class="ml-6 mt-2 overflow-hidden max-h-0 transition-all duration-300 ease-in-out">
-    <!-- Empty for now, but still expandable -->
+    <li class="cursor-pointer hover:text-blue-600 list-disc">AUTOMATIC</li>
+    <li class="cursor-pointer hover:text-blue-600 list-disc">MANUAL</li>
   </ul>
 </div>
 
