--- a/pages/Profile.html
+++ b/pages/Profile.html
@@ -72,11 +72,11 @@
         <p class="text-xs mt-1 font-['Raleway']">Kia K5</p>
       </div>
       <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
-        <img src="https://www.motortrend.com/uploads/sites/10/2022/10/2023-Haval-H6-GT-front-three-quarters-2.jpg" class="h-20 mx-auto object-contain" />
+        <img src="https://static.autoforce.com/plugins/images/clientes/gwm/produtos/sd/miniaturas/haval-h6-gt/Haval_H6_GT_Azul_Cianita_001.png?v=002"" class="h-20 mx-auto object-contain" />
         <p class="text-xs mt-1 font-['Raleway']">Haval H6 GT</p>
       </div>
       <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
-        <img src="https://pngimg.com/d/jimny_PNG9.png" class="h-20 mx-auto object-contain" />
+        <img src="https://pngimg.com_PNG9.png" class="h-20 mx-auto object-contain" />
         <p class="text-xs mt-1 font-['Raleway']">Suzuki Jimny</p>
       </div>
       <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
@@ -112,7 +112,7 @@
         <p class="text-xs mt-1 font-['Raleway']">Haval H6 GT</p>
       </div>
       <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
-        <img src="https://images.dealer.com/ddc/vehicles/2024/Ford/Bronco/SUV/trim_Base_8f6a7188/color/Eruption%20Green%20Metallic-AE-42,57,48-640-en_US.jpg" class="h-20 mx-auto object-contain" />
+        <img src="https://pngimg.com/d/jimny_PNG9.png" class="h-20 mx-auto object-contain" />
         <p class="text-xs mt-1 font-['Raleway']">Suzuki Jimny</p>
       </div>
       <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
